Added more features related to login and signUp